[gd_scene load_steps=3 format=3 uid="uid://6t0u01wxurnv"]

[ext_resource type="Script" path="res://Project152B.gd" id="1_eiqkh"]

[sub_resource type="LabelSettings" id="LabelSettings_i5dr2"]
font_size = 25

[node name="Project152B" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eiqkh")

[node name="LabelOutput" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_i5dr2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Calculate" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 320.0
grow_vertical = 0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -128.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
text = "Quit"

[node name="TextLength" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 128.0

[node name="TextWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 320.0

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
